fix: z-index for barcode and awesomeplete

--- a/frappe/public/scss/common/awesomeplete.scss
+++ b/frappe/public/scss/common/awesomeplete.scss
@@ -30,7 +30,7 @@
 		left: 0;
 		margin: 0;
 		padding: var(--padding-xs);
-		z-index: 1;
+		z-index: 2;
 		min-width: 250px;
 
 		&> li {
