--- a/frappe/public/scss/common/controls.scss
+++ b/frappe/public/scss/common/controls.scss
@@ -145,6 +145,10 @@ select.form-control {
 		background-color: none;
 		display: none;
 	}
+
+	.scan-icon {
+		z-index: 1;
+	}
 }
 
 .frappe-control:not([data-fieldtype='MultiSelectPills']):not([data-fieldtype='Table MultiSelect']) {
